Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139718

[Reg 6.8.3->6.8.4] Transparent windows are rendered with a black background in full screen mode or while resizing.

XMLWordPrintable

    • Windows
    • e413c726c (tqtc/lts-6.8)

      Transparent windows are rendered with a black background in full screen mode or while resizing.

      Reverting the patches for QTBUG-135859 resolves the issue in Qt 6.8.4.

      The issue does not occur in Qt 6.9.2.

      To reproduce the issue, run the attached example project.

        1. QtBUG-139718.zip
          2 kB
          Mehdi Belila
        2. 6.8.4.png
          12 kB
          Mehdi Belila
        3. 6.8.3.png
          261 kB
          Mehdi Belila
        For Gerrit Dashboard: QTBUG-139718
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes