qpa: Windows: Window initialization: Bring back applyBlurBehindWindow

The functionality of this function was deemed deprecated at some point,
but removing it caused regressions. Due to the timing of patches the
function call was removed in 6.8 with
39c061ab3cde03652e4988d425b5af1366597671 but not brought back. Instead
of doing partly reverts just readd the function call in question.

Fixes: QTBUG-139718
Fixes: QTBUG-139733
Change-Id: I63903838e6e40b9abdca4325882c1e7c183c6894
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>